@@ -2361,15 +2361,8 @@ class Element(Plugin):
         factory = self._get_project().config.element_factory
         return factory, self.__meta_kind, state
 
-    # _get_artifact_relative_path_files()
-    #
-    # Gets the file paths in the artifact and return them in a list
-    #
-    # Returns:
-    #   (list): A list of the file paths in the artifact
-    def _get_artifact_relative_file_paths(self):
-        casbd = self.__artifact.get_files()
-        return [f for f in casbd.list_relative_paths()]
+    def _walk_artifact_files(self):
+        yield from self.__artifact.get_files().walk()
 
     # _get_artifact()
     #
